[package]
name = "craneliftc"
version = "0.1.0"
edition = "2021"
description = "this is the version which is for building locally, always 0.1.0"

[lib]
name = "craneliftc"
crate-type = ["staticlib", "cdylib"]

[dependencies]
cranelift = {version = "0", features = ["module", "object"]}
paste = "1.0.11"

